--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   "dependencies": {
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
-    "babel-loader": "7.1.1",
+    "babel-loader": "^7.1.1",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
     "css-loader": "0.28.4",
+    "i": "^0.3.6",
     "live-server": "^1.2.0",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
